[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "A simple example package"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]