[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rltools"
version = "0.1.0"
description = "Tools for working with the ReaLigands library"
authors = [
    { name="Britton Stanley", email="bstan218@gmail.com" }
]
dependencies = [
    "rdkit"
]

[tool.setuptools.packages.find]
where = ["src"]